--- a/src/templates/about.html
+++ b/src/templates/about.html
@@ -7,4 +7,10 @@
     {{ my_text }}, {{ my_number }}, {{ my_list }}
 </p>
 
+<ul>
+{% for my_sub_item in my_list %}
+    <li>{{ my_sub_item }}</li>
+{%  endfor  %}
+</ul>
+
 {% endblock %}
